# Filewatcher

./: .gitignore  CMakeLists.txt  clang-format.txt
app/: CMakeLists.txt
app/include/: filewatchermodel.hpp
app/qml/: RenameWindow.qml  TableRowDelegate.qml  main.qml  qml.qrc
app/src/: filewatchermodel.cpp  main.cpp
fwlib/: CMakeLists.txt
fwlib/include/fwlib/: directorywatcher.hpp  fileinfo.hpp  idirectorywatcher.hpp  isubscriber.hpp  subscriber.hpp
fwlib/include/fwlib/detail/: directorywatcherimpl.hpp
fwlib/src/: directorywatcher.cpp  example.cpp
fwlib/src/detail/: directorywatcherimpl.cpp  directorywatcherimpl_linux.cpp  directorywatcherimpl_windows.cpp
